chore: release v0.0.6 - support Worlds/Avatars and add Morulab Launcher base

--- a/Editor/Avatars/com.moruton.gimmicks.Editor.Avatars.asmdef
+++ b/Editor/Avatars/com.moruton.gimmicks.Editor.Avatars.asmdef
@@ -1,11 +1,8 @@
 {
-    "name": "com.moruton.gimmicks.Editor",
-    "rootNamespace": "Moruton.Gimmicks.Editor",
+    "name": "com.moruton.gimmicks.Editor.Avatars",
     "references": [
         "com.moruton.gimmicks",
-        "VRC.Udon",
-        "UdonSharp.Runtime",
-        "UdonSharp.Editor"
+        "com.moruton.gimmicks.Editor"
     ],
     "includePlatforms": [
         "Editor"
@@ -15,13 +12,10 @@
     "overrideReferences": false,
     "precompiledReferences": [],
     "autoReferenced": true,
-    "defineConstraints": [],
+    "defineConstraints": [
+        "VRC_SDK_AVATARS"
+    ],
     "versionDefines": [
-        {
-            "name": "com.vrchat.worlds",
-            "expression": "",
-            "define": "VRC_SDK_WORLDS"
-        },
         {
             "name": "com.vrchat.avatars",
             "expression": "",
