--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
     "name": "com.moruton.gimmicks",
-    "version": "0.0.5",
+    "version": "0.0.6",
     "displayName": "Moruton Gimmicks Package",
-    "description": "Base class for Moruton Laboratory gimmicks.",
+    "description": "Base class and utilities for Moruton Laboratory gimmicks (Supports Worlds & Avatars).",
     "unity": "2022.3",
-    "dependencies": {
+    "vpmDependencies": {
         "com.vrchat.worlds": "3.5.0"
     }
 }
