--- a/package.json
+++ b/package.json
@@ -1,10 +1,8 @@
 {
     "name": "com.moruton.gimmicks",
-    "version": "0.0.6",
+    "version": "0.0.7",
     "displayName": "Moruton Gimmicks Package",
     "description": "Base class and utilities for Moruton Laboratory gimmicks (Supports Worlds & Avatars).",
-    "unity": "2022.3",
-    "vpmDependencies": {
-        "com.vrchat.worlds": "3.5.0"
-    }
+    "unity": "2019.4",
+    "vpmDependencies": {}
 }
