fix: add missing asmdef reference to com.moruton.gimmicks.Avatars

--- a/Editor/Avatars/com.moruton.gimmicks.Editor.Avatars.asmdef
+++ b/Editor/Avatars/com.moruton.gimmicks.Editor.Avatars.asmdef
@@ -2,7 +2,8 @@
     "name": "com.moruton.gimmicks.Editor.Avatars",
     "references": [
         "com.moruton.gimmicks",
-        "com.moruton.gimmicks.Editor"
+        "com.moruton.gimmicks.Editor",
+        "com.moruton.gimmicks.Avatars"
     ],
     "includePlatforms": [
         "Editor"
