--- a/Editor/Avatars/com.moruton.gimmicks.Editor.Avatars.asmdef
+++ b/Editor/Avatars/com.moruton.gimmicks.Editor.Avatars.asmdef
@@ -3,7 +3,8 @@
     "references": [
         "com.moruton.gimmicks",
         "com.moruton.gimmicks.Editor",
-        "com.moruton.gimmicks.Avatars"
+        "com.moruton.gimmicks.Avatars",
+        "nadena.dev.modular-avatar.core"
     ],
     "includePlatforms": [
         "Editor"
@@ -21,6 +22,11 @@
             "name": "com.vrchat.avatars",
             "expression": "",
             "define": "VRC_SDK_AVATARS"
+        },
+        {
+            "name": "nadena.dev.modular-avatar",
+            "expression": "",
+            "define": "MODULAR_AVATAR"
         }
     ],
     "noEngineReferences": false
